--- a/package.json
+++ b/package.json
@@ -4,21 +4,33 @@
   "description": "Northcoders News API Sprint",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node seed/test.seed.js && mocha spec",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "development": "nodemon listen.js",
+    "seed": "node seed/seed.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "mongoose": "^4.7.0"
+    "faker": "^4.1.0",
+    "lodash": "^4.17.5",
+    "mongoose": "^5.0.11",
+    "supertest": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.0.5",
-    "nodemon": "^1.17.2",
-    "supertest": "^3.0.0"
-  }
+    "nodemon": "^1.17.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/timhamrouge/BE-FT-northcoders-news.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/timhamrouge/BE-FT-northcoders-news/issues"
+  },
+  "homepage": "https://github.com/timhamrouge/BE-FT-northcoders-news#readme"
 }
