more error handling on articles.js, renamed development seed file

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha spec",
     "start": "node listen.js",
     "development": "nodemon listen.js",
-    "seed:dev": "node seed/seed.development.js",
+    "seed:dev": "node seed/development.seed.js",
     "seed:test": "node seed/test.seed.js",
     "seed:prod": "NODE_ENV=production node seed/seed.development.js"
   },
